--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -8,7 +8,7 @@ Welcome to Dcup, an open-source RAG-as-a-Service platform designed to simplify t
 # What is Dcup?
 Dcup connects your data with advanced AI systems by automating key steps:
 
-- **Data Ingestion**: Easily connect to various data sources, like Google Drive.
+- **Data Ingestion**: Easily connect to various data sources, like Google Drive, AWS ...etc .
 - **Data Processing**: Automatically chunk your data and generate embeddings using OpenAI.
 - **Storage & Indexing**: Efficiently store and index your embeddings with Qdrant's powerful vector database.
 - **Advanced Retrieval**: Leverage features like re-ranking and hybrid search to quickly find the most relevant information.
@@ -24,5 +24,3 @@ In today's data-driven world, extracting meaningful insights from vast amounts o
 
 # Who is Dcup For?
 Whether you're a developer eager to integrate cutting-edge AI into your projects or a non-technical user seeking an accessible solution for data retrieval and analysis, Dcup is built to empower you to make the most of your data.
-
-
